phpmyadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: phpmyadmin
  ports:
  - port: 80
    targetPort: 80
